# gamee

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/anticheat/: analyzer.go  analyzer_test.go
backend/internal/auth/: service.go  signature_test.go
backend/internal/config/: config.go
backend/internal/database/: postgres.go  redis.go
backend/internal/difficulty/: governor.go  governor_test.go
backend/internal/faucet/: service.go  service_test.go
backend/internal/games/: service.go
backend/internal/gamesession/: origin_test.go  randomness.go  randomness_test.go  service.go  switchboard.go  switchboard_test.go
backend/internal/jackpot/: service.go  tiers.go  tiers_test.go
backend/internal/leaderboard/: service.go
backend/internal/middleware/: auth.go  cors.go  cors_test.go  ratelimit.go
contracts/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
contracts/programs/gamee/: Cargo.toml
contracts/programs/gamee/src/: errors.rs  lib.rs
contracts/programs/gamee/src/instructions/: admin.rs  buy_ticket.rs  commit_spin.rs  mod.rs  settle_session.rs  verifier_set.rs
contracts/programs/gamee/src/state/: game_config.rs  game_session.rs  jackpot.rs  mod.rs  platform.rs  ticket.rs  verifier_set.rs
contracts/scripts/: bots-offline-check.ts  e2e-bots.ts  e2e-devnet.ts  initialize.ts  vrf-switchboard.ts
contracts/tests/: gamee.ts
docs/: ARCHITECTURE.md  BETA-GUIDE.md  MAINNET-CHECKLIST.md  NEXT-STEPS.md  RECENT-BUILD-SUMMARY.md  STAGE-0-Legal-Validation.md  STAGE-1-Architecture.md  STAGE-2-Core-Infrastructure.md  STAGE-3-Anti-Cheat.md  STAGE-4-Game-Library-Economy.md  STAGE-5-Security-Audit-Launch.md  STAGE-6-Live-Ops-Growth.md
frontend/: .gitignore  Dockerfile  POLISH-NOTES.md  README.md  TIER-SELECTOR-NOTES.md  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: copy-gamesdk.mjs
games/: jest.config.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
games/playground/: index.html  main.ts
games/scripts/: dino-sprint-bot-check.js  invariant-check.js  wing-rush-bot-check.js
games/sdk/: engine.ts  index.ts  interface.ts  renderer.ts  run.js  verifier.ts
landing-page/: index.html  script.js  style.css
scripts/: beta-up.sh  dev-start.sh  init-db.sql  package-lock.json  package.json  prometheus.yml  setup-dev.sh  tsconfig.json  watchdog.sh
scripts/economy-sim/: RESULTS.md  simulate.ts
(+75 files in other folders)
