[package]
name = "gamee"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "gamee"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
# Required by Anchor 0.30+'s IDL generation (anchor build/test build the IDL
# from source via this feature instead of a separate CLI step).
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
# anchor-spl's "token" feature re-exports everything this crate needs
# (Mint, Token, TokenAccount, Transfer) from its own matched spl-token
# version — the code never calls spl_token:: directly. A direct spl-token
# dependency here previously resolved to v6.0.0, which itself depends on
# solana-program 2.x — a different major SDK generation than the
# solana_version = "1.18.26" / anchor-lang 0.30.1 this whole program
# targets, and pulled in edition2024-requiring transitive crates that the
# Solana 1.18.26 toolchain's bundled (much older) cargo can't even parse.
anchor-spl = { version = "0.30.1", features = ["token"] }
